k2/service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service-8888
spec:
  selector:
    app: myapp-8888
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
