k2/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress-8888
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /config
            pathType: Prefix
            backend:
              service:
                name: myapp-service-8888
                port:
                  number: 8888
